Added in ability to POST new client to the API

--- a/apis/BrokerageAccountApi/BrokerageAccountApi.Core/BrokerageAccountApi.Core.csproj
+++ b/apis/BrokerageAccountApi/BrokerageAccountApi.Core/BrokerageAccountApi.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\Framework\Framework.csproj" />
+  </ItemGroup>
+
 </Project>
