--- a/apis/BrokerageAccountApi/BrokerageAccountApi.Core/BrokerageAccountApi.Core.csproj
+++ b/apis/BrokerageAccountApi/BrokerageAccountApi.Core/BrokerageAccountApi.Core.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Framework\Framework.csproj" />
+    <ProjectReference Include="..\..\FrameworkProjects\DavidBerry.Framework\DavidBerry.Framework\DavidBerry.Framework.csproj" />
   </ItemGroup>
 
 </Project>
