--- a/apis/BrokerageAccountApi/BrokerageAccountApi/BrokerageAccountApi.csproj
+++ b/apis/BrokerageAccountApi/BrokerageAccountApi/BrokerageAccountApi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <UserSecretsId>401d2072-dd44-410f-91ba-6cd892fac940</UserSecretsId>
   </PropertyGroup>
@@ -10,22 +10,26 @@
     <DocumentationFile>C:\dev\portfolio-manager\apis\BrokerageAccountApi\BrokerageAccountApi\BrokerageAccountApi.xml</DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\github\Portfolio-Manager\apis\BrokerageAccountApi\BrokerageAccountApi\BrokerageAccountApi.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="FluentValidation.AspNetCore" Version="8.5.1" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.1" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Framework.ApiUtil\Framework.ApiUtil.csproj" />
+    <ProjectReference Include="..\..\FrameworkProjects\DavidBerry.Framework.ApiUtil\DavidBerry.Framework.ApiUtil\DavidBerry.Framework.ApiUtil.csproj" />
     <ProjectReference Include="..\BrokerageAccountApi.Core\BrokerageAccountApi.Core.csproj" />
     <ProjectReference Include="..\BrokerageAccountApi.Data.EF\BrokerageAccountApi.Data.EF.csproj" />
     <ProjectReference Include="..\BrokerageAccounts.Data.Dapper\BrokerageAccounts.Data.Dapper.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Clients.Accounts\" />
   </ItemGroup>
 
 </Project>
