--- a/apis/SecuritiesApi/Securities.Core/Securities.Core.csproj
+++ b/apis/SecuritiesApi/Securities.Core/Securities.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Framework\Framework.csproj" />
+    <ProjectReference Include="..\..\FrameworkProjects\DavidBerry.Framework\DavidBerry.Framework\DavidBerry.Framework.csproj" />
   </ItemGroup>
 
 </Project>
