--- a/apis/SecuritiesApi/Securities.Data.Dapper/Securities.Data.Dapper.csproj
+++ b/apis/SecuritiesApi/Securities.Data.Dapper/Securities.Data.Dapper.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FrameworkProjects\DavidBerry.Framework\DavidBerry.Framework\DavidBerry.Framework.csproj" />
     <ProjectReference Include="..\Securities.Core\Securities.Core.csproj" />
   </ItemGroup>
 
